# BasicPythonProject

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: code-tests.yml  lint-code.yml  linting.yaml  requirements.txt
tests/: test_main.py
